third_party/blink/web_tests/external/wpt/requestidlecallback/idlharness.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface Window: original interface defined assert_true: Original interface should be defined expected true got false
PASS IdleDeadline interface: existence and properties of interface object
PASS IdleDeadline interface object length
PASS IdleDeadline interface object name
PASS IdleDeadline interface: existence and properties of interface prototype object
PASS IdleDeadline interface: existence and properties of interface prototype object's "constructor" property
PASS IdleDeadline interface: existence and properties of interface prototype object's @@unscopables property
PASS IdleDeadline interface: operation timeRemaining()
PASS IdleDeadline interface: attribute didTimeout
Harness: the test ran to completion.

